--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,39 @@
-include: package:flutter_lints/flutter.yaml
+include: package:lints/recommended.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+analyzer:
+  errors:
+    # Enforce Result Controller best practices
+    prefer_typing_uninitialized_variables: warning
+    avoid_returning_null: error
+    avoid_returning_null_for_future: error
+    
+linter:
+  rules:
+    # Core Result Controller usage guidelines
+    - prefer_const_constructors
+    - prefer_const_constructors_in_immutables
+    - prefer_final_fields
+    - prefer_final_in_for_each
+    - prefer_final_locals
+    
+    # Error handling best practices
+    - avoid_catching_errors
+    - avoid_empty_else
+    - avoid_returning_null
+    - avoid_returning_null_for_future
+    - avoid_types_on_closure_parameters
+    
+    # Code quality for Result patterns
+    - prefer_is_empty
+    - prefer_is_not_empty
+    - prefer_typing_uninitialized_variables
+    - require_trailing_commas
+    - unnecessary_null_checks
+    - unnecessary_null_in_if_null_operators
+    
+    # Documentation requirements
+    - public_member_api_docs
+    - comment_references
